# mbed-os

connectivity/FEATURE_BLE/source/generic/: CMakeLists.txt  KVStoreSecurityDb.cpp  KVStoreSecurityDb.h
connectivity/drivers/ble/FEATURE_BLE/TARGET_Ambiq_Micro/TARGET_Apollo3/: AP3CordioHCIDriver.cpp  AP3CordioHCIDriver.h  AP3CordioHCITransportDriver.cpp  AP3CordioHCITransportDriver.h
connectivity/drivers/ble/FEATURE_BLE/TARGET_Ambiq_Micro/hal/apollo3/: hci_drv_apollo3.c  hci_drv_apollo3.h
drivers/include/drivers/: I2C.h
hal/source/: mbed_pinmap_default.cpp
platform/source/: mbed_retarget.cpp
storage/kvstore/kv_config/global/: mbed_lib.json
targets/: targets.json
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/: CMakeLists.txt
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_AMA3BEVB/: PinNames.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_AMA3BEVB/bsp/: am_bsp.h  am_bsp_pins.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_SIXTEENLAB_DK/: CMakeLists.txt  PinNames.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_SIXTEENLAB_DK/bsp/: am_bsp.c  am_bsp.h  am_bsp_pins.c  am_bsp_pins.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_SIXTEENLAB_OZON/: CMakeLists.txt  PinNames.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TARGET_SXTLAB_OZ_JUNE_21/: CMakeLists.txt  PinNames.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/TOOLCHAIN_GCC_ARM/: AMA3B1KK.ld
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/device/: PeripheralPinConfigs.c  device.h
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/sdk/mcu/apollo3/hal/: am_hal_ble_patch_b0.c
